[package]
name = "wgpu-mm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
panic = 'abort'
#profiling
lto = "fat"
codegen-units = 1

[dependencies]
bytemuck = "1.13.1"
num-traits = "0.2.15"
rand = "0.8.5"
tera = "1.18.1"
tokio = { version = "1.26.0", features = ["full"] }
half = { version = "2.2.1", features = ["bytemuck", "num-traits"] }
env_logger = "0.10.0"
matrixmultiply = "0.3.2"
derive-new = "0.5.9"
log = "0.4.17"
wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk" }
smallvec = "1.11.0"
tabled = "0.14.0"
anyhow = "1.0.74"
